update cache and user/video logic
